<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:item="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:layout_marginTop="25dp"
            android:background="@color/colorItemLine"/>

        <RelativeLayout
            style="@style/ItemSimpleBgStyle">

            <TextView
                style="@style/ItemSimpleTipStyle"
                android:text="@string/setting_gag"/>

            <com.bokecc.ccsskt.example.view.ToggleButton
                android:id="@+id/id_item_gag"
                style="@style/ItemSimpleIconStyle"
                android:checked="false"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:background="@color/colorItemLine"/>

        <RelativeLayout
            style="@style/ItemSimpleBgStyle">

            <TextView
                style="@style/ItemSimpleTipStyle"
                android:text="@string/setting_close_mic"/>

            <com.bokecc.ccsskt.example.view.ToggleButton
                android:id="@+id/id_item_close_mic"
                style="@style/ItemSimpleIconStyle"
                android:checked="false"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:background="@color/colorItemLine"/>

        <com.bokecc.ccsskt.example.view.ItemLayout
            android:id="@+id/id_setting_down_mai"
            style="@style/ItemStyle"
            item:lineMode="BOTTOM"
            item:tipTxt="@string/setting_mai"/>

        <com.bokecc.ccsskt.example.view.ItemLayout
            android:id="@+id/id_setting_lianmai_mode"
            style="@style/ItemStyle"
            android:layout_marginTop="20dp"
            item:lineMode="BOTH"
            item:tipTxt="@string/setting_lianmai_mode"
            item:valueTxt="@string/setting_lianmai_free"/>

        <!--<RelativeLayout
            android:id="@+id/id_setting_loop_play"
            style="@style/ItemSimpleBgStyle">

            <TextView
                style="@style/ItemSimpleTipStyle"
                android:text="@string/setting_loop_play"/>

            <com.bokecc.ccsskt.example.view.ToggleButton
                android:id="@+id/id_item_loop_play"
                style="@style/ItemSimpleIconStyle"
                android:checked="false"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:background="@color/colorItemLine"/>-->

        <com.bokecc.ccsskt.example.view.ItemLayout
            android:id="@+id/id_setting_loop_play_time"
            style="@style/ItemStyle"
            android:visibility="gone"
            item:lineMode="BOTTOM"
            item:tipTxt="@string/setting_loop_play_time"/>

        <com.bokecc.ccsskt.example.view.ItemLayout
            android:id="@+id/id_setting_tbitrate"
            style="@style/ItemStyle"
            android:layout_marginTop="20dp"
            item:lineMode="BOTH"
            item:tipTxt="@string/setting_tbitrate"/>

        <com.bokecc.ccsskt.example.view.ItemLayout
            android:id="@+id/id_setting_sbitrate"
            style="@style/ItemStyle"
            item:lineMode="BOTTOM"
            item:tipTxt="@string/setting_sbitrate"/>

        <com.bokecc.ccsskt.example.view.ItemLayout
            android:id="@+id/id_setting_media_mode"
            style="@style/ItemStyle"
            android:layout_marginTop="20dp"
            item:lineMode="BOTH"
            item:tipTxt="@string/setting_media_mode"
            item:valueTxt="@string/setting_media_both"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:background="@color/colorItemLine"
            android:layout_marginTop="20dp"
            android:visibility="gone"/>

        <RelativeLayout
            style="@style/ItemSimpleBgStyle"
            android:visibility="gone">

            <TextView
                style="@style/ItemSimpleTipStyle"
                android:text="@string/setting_low_flow"/>

            <com.bokecc.ccsskt.example.view.ToggleButton
                android:id="@+id/id_item_low_flow"
                style="@style/ItemSimpleIconStyle"
                android:checked="false"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:background="@color/colorItemLine"
            android:layout_marginBottom="20dp"
            android:visibility="gone"/>

    </LinearLayout>
</ScrollView>

