<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:src="@drawable/class_direction"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="#464646"
        android:textSize="15sp"
        android:text="@string/direction_class_tip"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/id_direction_class_v"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_btn"
        android:text="@string/direction_class_v_tip"
        android:textColor="#ffffff"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/id_direction_class_h"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_btn"
        android:text="@string/direction_class_h_tip"
        android:textColor="#ffffff"
        android:textSize="16sp"/>

</LinearLayout>
