<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/id_validate_room_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/validate_room_icon"/>

    <TextView
        android:id="@+id/id_validate_room_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_validate_room_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="#000000"/>

    <com.bokecc.ccsskt.example.view.EllipsizeEndTextView
        android:id="@+id/id_validate_room_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_validate_room_name"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:ellipsize="end"
        android:textSize="12sp"/>

    <View
        android:id="@+id/id_id_validate_room_desc_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:layout_below="@id/id_validate_room_desc"
        android:layout_marginTop="20dp"
        android:background="@color/colorItemLine"/>

    <LinearLayout
        android:id="@+id/id_validate_nickname_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_below="@id/id_id_validate_room_desc_line"
        android:background="#ffffff"
        android:paddingEnd="25dp"
        android:paddingStart="25dp">

        <EditText
            android:id="@+id/id_validate_nickname"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="@null"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/validate_nickname"
            android:maxLength="20"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="#dddddd"
            android:textCursorDrawable="@drawable/cursor_style"
            android:textSize="16sp"/>
    </LinearLayout>

    <View
        android:id="@+id/id_validate_nickname_bottom_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:layout_below="@id/id_validate_nickname_layout"
        android:background="@color/colorItemLine"/>

    <LinearLayout
        android:id="@+id/id_validate_passwd_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_below="@id/id_validate_nickname_bottom_line"
        android:background="#ffffff"
        android:paddingEnd="25dp"
        android:paddingStart="25dp">

        <EditText
            android:id="@+id/id_validate_passwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="@null"
            android:hint="@string/validate_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="#dddddd"
            android:textCursorDrawable="@drawable/cursor_style"
            android:textSize="16sp"/>
    </LinearLayout>

    <View
        android:id="@+id/id_validate_passwd_bottom_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:layout_below="@id/id_validate_passwd_layout"
        android:background="@color/colorItemLine"/>

    <Button
        android:id="@+id/id_validate_room"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_below="@id/id_validate_passwd_bottom_line"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_btn"
        android:text="@string/validate_room"
        android:textColor="#ffffff"
        android:textSize="16sp"/>

</RelativeLayout>
