<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/id_popup_window_outside_view"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#80000000">

    <RelativeLayout
        android:id="@id/id_popup_window_anim_view"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/popup_anim_bg"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/id_vote_result_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/vote_tip"
            tools:ignore="RelativeOverlap"/>

        <ImageButton
            android:id="@+id/id_vote_reslut_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/popup_close"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/id_vote_result_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_vote_result_tip"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/id_vote_result_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_vote_result_statistics"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="7dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/id_vote_result_self_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_vote_result_content"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_vote_result_self"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/self_answer_tip"/>
            <ImageView
                android:id="@+id/id_vote_result_self_img1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>
            <ImageView
                android:id="@+id/id_vote_result_self_img2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>
            <ImageView
                android:id="@+id/id_vote_result_self_img3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>
            <ImageView
                android:id="@+id/id_vote_result_self_img4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>
            <ImageView
                android:id="@+id/id_vote_result_self_img5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_vote_result_right_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_vote_result_self_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/id_vote_result_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:textColor="#4bbd3f"
                android:text="@string/right_answer_tip"/>
            <!--可以配合spannable直接用TextView展示所有的图片-->
            <ImageView
                android:id="@+id/id_vote_result_right_img1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>
            <ImageView
                android:id="@+id/id_vote_result_right_img2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>
            <ImageView
                android:id="@+id/id_vote_result_right_img3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>
            <ImageView
                android:id="@+id/id_vote_result_right_img4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>
            <ImageView
                android:id="@+id/id_vote_result_right_img5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>